--- a/planos.html
+++ b/planos.html
@@ -40,12 +40,12 @@
 
       <!-- PLANO BÁSICO -->
       <div class="plano-card">
-        <h2>Plano Básico</h2>
-        <p>Perfeito para quem busca um cuidado essencial com economia.</p>
+       <h2>Plano Básico - Dentista Solo</h2>
+        <p>Profissionais independentes que precisam de organização e ferramentas básicas.</p>
         <ul>
-          <li>✔ Limpeza e avaliação anual</li>
-          <li>✔ Descontos em procedimentos</li>
-          <li>✔ Suporte via telefone</li>
+          <li>✔ Agenda online integrada</li>
+          <li>✔ Histórico clínico simples</li>
+          <li>✔ Cadastro de pacientes</li>
         </ul>
         <p class="preco">R$ 99/mês</p>
         <button
@@ -58,12 +58,12 @@
 
       <!-- PLANO PREMIUM -->
       <div class="plano-card destaque">
-        <h2>Plano Premium</h2>
-        <p>Mais conforto e flexibilidade com cobertura ampliada.</p>
+       <h2>Plano Premium - Consultório </h2>
+        <p>Ideal para dentistas já estruturados que precisam de mais controle.</p>
         <ul>
           <li>✔ Todas as vantagens do Plano Básico</li>
-          <li>✔ Atendimento prioritário</li>
-          <li>✔ Consultas ilimitadas</li>
+          <li>✔ Relatórios financeiros mensais</li>
+          <li>✔ Emissão de recibos e documentos</li>
         </ul>
         <p class="preco">R$ 149/mês</p>
         <button
@@ -74,14 +74,14 @@
         </button>
       </div>
 
-      <!-- PLANO FAMÍLIA -->
+      <!-- PLANO CLÍNICA -->
       <div class="plano-card">
-        <h2>Plano Família</h2>
-        <p>Para quem quer cuidar de todos da casa com desconto.</p>
+        <h2>Plano Clínica - Equipe / Múltiplos dentistas</h2>
+        <p>Para clínicas com vários profissionais e fluxo mais complexo.</p>
         <ul>
-          <li>✔ Até 4 dependentes</li>
-          <li>✔ Atendimento domiciliar</li>
-          <li>✔ Cobertura completa</li>
+          <li>✔ Todos os recursos do Plano Profissional</li>
+          <li>✔ Controle avançado de estoque</li>
+          <li>✔ Dashboard de produção por profissional</li>
         </ul>
         <p class="preco">R$ 249/mês</p>
         <button
