--- a/assinatura.html
+++ b/assinatura.html
@@ -59,7 +59,7 @@
           <label class="plan-item">
             <input type="radio" name="plano" value="Familia|249" data-nome="Plano Família" data-valor="249" required>
             <div>
-              <strong>Plano Família</strong>
+              <strong>Plano Clínica</strong>
               <span>R$ 249/mês</span>
             </div>
           </label>
